Fix visible scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,15 @@ html {
 	scroll-behavior: smooth;
 }
 
+html,
+body {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+
 body {
 	overflow: auto;
 	scrollbar-width: none;
@@ -13,4 +22,10 @@ body {
 
 body::-webkit-scrollbar {
 	display: none;
+}
+
+#app {
+	width: 100vw;
+	height: 100vh;
+	overflow: hidden;
 }
